syntax = "proto3";

package clusterpb;

import "go.etcd.io/etcd/raft/raftpb/raft.proto";

message Payload { bytes Data = 1; }

message RaftContext {
  uint64 ID = 1;
  string Address = 2;
}

message JoinClusterResponse {}

message PeerResponse { bool status = 1; }

message GetMembersRequest {}
message Member {
  uint64 ID = 1;
  string Address = 2;
  bool IsLeader = 3;
  bool IsAlive = 4;
}
message GetMembersResponse { repeated Member Members = 1; }
message GetStatusRequest {};
message GetStatusResponse {
  bool IsLeader = 1;
  bool HasBeenBootstrapped = 2;
  bool IsInCluster = 3;
};

service Raft {
  rpc ProcessMessage(raftpb.Message) returns (Payload) {}
  rpc JoinCluster(RaftContext) returns (JoinClusterResponse) {}
  rpc GetMembers(GetMembersRequest) returns (GetMembersResponse) {}
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
}

